Add delete exercise endpoint
