# openapi.yaml
@@ -52,6 +52,25 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '500':
           $ref: '#/components/responses/ServerError'
+    delete:
+      tags:
+        - Exercises
+      summary: 'Delete an existing exercise'
+      operationId: deleteExercise
+      parameters:
+        -
+          name: exerciseId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/ServerError'
   /api/login:
     post:
       tags:
